fixed some display on smaller devices.

--- a/src/components/shared/scss/_hypothesis.scss
+++ b/src/components/shared/scss/_hypothesis.scss
@@ -37,6 +37,10 @@
       margin: 20px 0;
       width: 434px;
       height: 370px;
+
+      @include bp(medium) {
+        display: none;
+      }
     }
 
     p {
@@ -108,11 +112,5 @@
 
   img {
     width: 100%;
-  //   float: right;
-    // width: 150px;
-  //   height: 150px;
-  //   border-radius: 75px;
-
-  //   margin: 8px 10px;
   }
 }
